<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="6.8dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Name"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/don_name"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Email"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/don_email"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Age"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/don_age"
            android:layout_height="match_parent"
            android:layout_weight="4" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Password"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/don_pass"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Confirm_Password"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:id="@+id/don_con_pass"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Location"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/don_get_loc"
            android:text="@string/Get_Location"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/don_save"
            android:textAllCaps="false"
            android:background="#EDEDED"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
</LinearLayout>