<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorgray"
        android:hint="@string/Description"
        android:inputType="textMultiLine"
        android:lines="15"
        android:minLines="4"
        android:paddingLeft="10dp"
        android:id="@+id/message"
        android:paddingRight="10dp"
        android:scrollbars="vertical|horizontal"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center">

        <Button
            android:id="@+id/send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="5dp"
            android:background="#EDEDED"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>